fix overflow

--- a/styles.css
+++ b/styles.css
@@ -301,6 +301,11 @@ body {
   background-color: #F8F8F8;
   position: relative;
   height: 100%;
+  overflow-y: scroll;
+}
+.display #ytModal::-webkit-scrollbar {
+  width: 2px;
+  background-color: transparent;
 }
 .display #ytModal .card {
   margin-top: 3%;
